--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,5 @@
 
 // Sections
 @import "./sections/masthead";
-@import "./sections/showcase";
-@import "./sections/testimonials";
-@import "./sections/call-to-action";
+@import "./sections/paragraphs";
 @import "./sections/footer";
