--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -2,18 +2,20 @@
 // Masthead
 // 
 
+
+
 header.masthead {
     position: relative;
-    background-color: $gray-800;
-    background: url('../assets/img/bg-masthead.jpg') no-repeat center center;
+    background: url('../assets/img/geom.png') no-repeat center center;
     background-size: cover;
-    padding-top: 8rem;
-    padding-bottom: 8rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    height: 30rem;
 
     &:before {
         content: '';
         position: absolute;
-        background-color: mix($gray-900, $primary, 75%);
+        background-color: $primary;
         height: 100%;
         width: 100%;
         top: 0;
@@ -21,16 +23,32 @@ header.masthead {
         opacity: 0.5;
     }
 
-    h1 {
-        font-size: 2rem;
+    // h1 {
+    //     font-size: 1rem;
+    // }
+
+    p {
+        line-height: 30px;
+        font-style: italic;
+        size: 20px;
+        font-weight: 400;
+    }
+
+
+    i.fas.fa-university {
+        font-size: 70px;
     }
 
     @media (min-width: 768px) {
-        padding-top: 12rem;
-        padding-bottom: 12rem;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
 
-        h1 {
-            font-size: 3rem;
-        }
+        // h1 {
+        //     font-size: 3rem;
+        // }
     }
+}
+
+i.fas.fa-quote-left {
+    font-size: 30px;
 }
