--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -5,4 +5,4 @@
 // Use this file to override Bootstrap color defaults
 
 // Uncomment and build to see example
-// $primary: #10ac8a;
+$primary: #255CA1;
